src/tests/ci/assignment_5_functions/valid/05_string_define.c
#define MSG "hello"
#include <stdio.h>

int main() {
    printf(MSG);
    return 0;
}