src/tests/ci/assignment_5_functions/invalid_semantic/14_missing_return_non_void.c
int compute(int x) {
    if (x > 0) {
        return x * 2;
    }
    // missing else branch or explicit return
}

int main() {
    return compute(5);
}